When card ifself has enough information (e.g. OpenPGPcard), it should be possible to use the card keys with no prior actions like gpg --card-status.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG1aaadede76cc agent: Show "no secret key" instead of "card removed". | |||
rGeda3c688fc2e agent: Allow decryption with card but no file. |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | gniibe | T5170 card: Allow use cases with no corresponding *.key file under private-keys-v1.d | ||
Resolved | gniibe | T5166 gpg --quick-gen-key userid card fails on first run resp. for unknown key |